# EVM

./: README.md  pyproject.toml  topic_4_regression_lab.ipynb  txt.txt  Задание Тема 4.docx
Datasets/: kuiper.xls
