[project]
name = "evm-topic-4-lab"
version = "0.1.0"
description = "Local Python environment for regression analysis lab topic 4."
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.8.0",
    "nbclient>=0.10.0",
    "nbformat>=5.10.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "xlrd>=2.0.1",
]

